[launcher] Fix alignment of preferences inputs

--- a/css/styles.css
+++ b/css/styles.css
@@ -563,9 +563,6 @@ a:hover {
 .miro-launcher-input:disabled {
   cursor: not-allowed !important;
 }
-.db-path-field {
-  margin-bottom: 20px;
-}
 .custom-file-label::after {
   padding: .375rem .5rem;
 }
@@ -908,7 +905,6 @@ a:hover {
 }
 .settings-item {
   text-align: right;
-  margin-bottom:25px;
   width: 70%;
   position: absolute;
   right: 10px;
